--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "Zap - A 1v1 speed and coordination game for Arduino!",
+  "name": "zap",
   "version": "0.1.0",
-  "description": "",
+  "description": "A 1v1 game for Arduino that is all about speed and reflexes!",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
